--- a/generators/app/templates/.bash_enter.hbs
+++ b/generators/app/templates/.bash_enter.hbs
@@ -91,8 +91,11 @@ _alias_drupal() { docker-compose run --rm --user www-data --entrypoint php --wor
 {{/if_eq}}
 {{#if_eq dbImage "postgres" ~}}
 _alias_psql() { docker-compose run --user postgres --workdir="$(_docker_devbox_map_workdir "/workdir")" db psql -h db -U {{projectName}} -d {{projectName}} $@;}
+_alias_psql-postgres() { docker-compose run --user postgres --workdir="$(_docker_devbox_map_workdir "/workdir")" db psql -h db -U postgres -d {{projectName}} $@;}
 _alias_pg_dump() { docker-compose run --user postgres --workdir="$(_docker_devbox_map_workdir "/workdir")" db pg_dump -h db -U {{projectName}} -O $@;}
+_alias_pg_dump-postgres() { docker-compose run --user postgres --workdir="$(_docker_devbox_map_workdir "/workdir")" db pg_dump -h db -U postgres -O $@;}
 _alias_pg_restore() { docker-compose run --user postgres --workdir="$(_docker_devbox_map_workdir "/workdir")" db pg_restore -h db -U {{projectName}} -d {{projectName}} $@;}
+_alias_pg_restore-postgres() { docker-compose run --user postgres --workdir="$(_docker_devbox_map_workdir "/workdir")" db pg_restore -h db -U postgres -d {{projectName}} $@;}
 {{/if_eq}}
 {{#if_eq dbImage "mysql" ~}}
 _alias_mysql() { docker-compose exec --user root db mysql -uroot -p $@;}
