--- a/generators/app/templates/.docker/php/Dockerfile.hbs
+++ b/generators/app/templates/.docker/php/Dockerfile.hbs
@@ -37,13 +37,6 @@ RUN yes | pecl install xdebug{{#if_eq phpVersion '5.6'}}-2.5.5{{/if_eq}} \
     && echo "zend_extension=$(find /usr/local/lib/php/extensions/ -name xdebug.so)" > /usr/local/etc/php/conf.d/xdebug.ini \
     && echo "xdebug.remote_enable=on" >> /usr/local/etc/php/conf.d/xdebug.ini \
     && echo "xdebug.remote_autostart=off" >> /usr/local/etc/php/conf.d/xdebug.ini
-RUN echo "memory_limit = -1" > /usr/local/etc/php/conf.d/memory.ini
-
-RUN echo "upload_max_filesize = 10M" > /usr/local/etc/php/conf.d/upload.ini
-RUN echo "post_max_size = 10M" >> /usr/local/etc/php/conf.d/upload.ini
-
-RUN echo "error_log = /var/www/html/private/logs/php.log" > /usr/local/etc/php/conf.d/logs.ini
-RUN echo "log_errors = On" >> /usr/local/etc/php/conf.d/logs.ini
 
 # Enable Apache modules
 RUN a2enmod rewrite
@@ -124,6 +117,16 @@ RUN echo "FromLineOverride=YES" >> /etc/ssmtp/ssmtp.conf && \
   echo "mailhub=mailcatcher" >> /etc/ssmtp/ssmtp.conf && \
   echo 'sendmail_path = "/usr/sbin/ssmtp -t"' > /usr/local/etc/php/conf.d/mail.ini
 {{/if}}
+
+RUN echo "memory_limit = -1" > /usr/local/etc/php/conf.d/memory.ini
+
+RUN echo "upload_max_filesize = 10M" > /usr/local/etc/php/conf.d/upload.ini
+RUN echo "post_max_size = 10M" >> /usr/local/etc/php/conf.d/upload.ini
+
+RUN echo "error_log = /dev/stderr" > /usr/local/etc/php/conf.d/logs.ini
+RUN echo "log_errors = On" >> /usr/local/etc/php/conf.d/logs.ini
+
+RUN echo "error_reporting = E_ALL" >> /usr/local/etc/php/conf.d/logs.ini
 
 # Fix write permissions on Linux/Mac
 RUN usermod -u ${HOST_UID:-1000} www-data
