--- a/generators/app/templates/docker-compose.yml.hbs
+++ b/generators/app/templates/docker-compose.yml.hbs
@@ -99,6 +99,8 @@ services:
       context: .docker
       dockerfile: mapserver/Dockerfile
     init: true
+    environment:
+      LISTEN_PORT_80: 1
     volumes:
       - "${COMPOSE_PROJECT_DIR}/mapserver:/etc/mapserver"
     user: "${USER_ID}"
