--- a/generators/app/templates/.bash_enter.hbs
+++ b/generators/app/templates/.bash_enter.hbs
@@ -1,162 +1,26 @@
-########################################################################
-# This is a smartcd script.  Commands you type will be run when you
-# enter this directory.  The string __PATH__ will be replaced with
-# the current path.  Some examples are editing your $PATH or creating
-# a temporary alias:
-#
-#     autostash PATH=__PATH__/bin:$PATH
-#     autostash alias restart="service stop; sleep 1; service start"
-#
-# See http://smartcd.org for more ideas about what can be put here
-#######################################################################
-BASH_ENTER_ENV_FILE=".bash_enter_env"
-cp -n $BASH_ENTER_ENV_FILE.dist $BASH_ENTER_ENV_FILE
-[ -f $BASH_ENTER_ENV_FILE ] && . $BASH_ENTER_ENV_FILE
+#!/usr/bin/env bash
 
-if [ -z "$BASH_ENTER_ALIAS_ONLY" ]; then
-  autostash export USER_ID=$(id -u)
-  autostash export GROUP_ID=$(id -g)
-  autostash export USER_NAME=$(id -un)
-  autostash export GROUP_NAME=$(id -gn)
-  autostash export HOST_IP=${HOST_IP-127.0.0.1}
+if [[ $(basename "$BASH_SOURCE") = .bash_enter ]]; then
+  DOCKER_DEVBOX_DIR=$(dirname "$BASH_SOURCE")
+else
+  DOCKER_DEVBOX_DIR=$PWD
+fi
+export DOCKER_DEVBOX_DIR=$DOCKER_DEVBOX_DIR
 
-  autostash COMPOSE_PROJECT_DIR=$PWD
-  autostash DOCKER_VERSION=$(docker --version | sed -rn "s/Docker version (.*?), build .*/\1/p")
-  autostash DOCKER_COMPOSE_VERSION=$(docker-compose --version | sed -rn "s/docker-compose version (.*?), build .*/\1/p")
-
-  # Define DOCKER_DEVBOX_ENV to customize environment configuration files
-  autostash DOCKER_DEVBOX_ENV="${DOCKER_DEVBOX_ENV:-dev}"
-
-  echo -n "Copying CA Certificates from host to docker build context ... "
-  # Copy host CA certificates to .docker directory for usage in Dockerfile
-  rm -Rf .docker/.ca-certificates
-  mkdir -p .docker/.ca-certificates
-  cp -L /etc/ssl/certs/{GFI*.pem,*.local.pem} .docker/.ca-certificates
-  for file in .docker/.ca-certificates/*.pem; do
-    mv "$file" ".docker/.ca-certificates/$(basename "$file" .pem).crt"
+if [ -d ~/.docker-devbox/.bash_enter.d ]; then
+  for enter_script in ~/.docker-devbox/.bash_enter.d/*; do
+    ln -rfs $enter_script "$DOCKER_DEVBOX_DIR"/.bash_enter.d/$(basename "$enter_script")
   done
-  echo "OK!"
-
-  _docker_devbox_env_symlink() {
-    FILEPATH="$1"
-
-    DIRNAME=$(dirname -- "$FILEPATH")
-    FILENAME=$(basename -- "$FILEPATH")
-    EXTENSION="${FILENAME##*.}"
-    FILENAME="${FILENAME%.*}"
-
-    ACTIVE_ENV=0
-    MESSAGE="[symlink] $DIRNAME/$FILENAME.$DOCKER_DEVBOX_ENV.$EXTENSION -> $DIRNAME/$FILENAME.$EXTENSION. (Symlink has not been created)"
-
-    for ENV in $DOCKER_DEVBOX_ENV_LIST; do
-      if [ "$ENV" = "$DOCKER_DEVBOX_ENV" ]; then
-        ACTIVE_ENV=1;
-      fi
-      if [ $ACTIVE_ENV = 1 ]; then
-        if [ -f "$DIRNAME/$FILENAME.$ENV.$EXTENSION" ] && ([ ! -f "$DIRNAME/$FILENAME.$EXTENSION" ] || [ -h "$DIRNAME/$FILENAME.$EXTENSION" ]); then
-          ln -rfs "$DIRNAME/$FILENAME.$ENV.$EXTENSION" "$DIRNAME/$FILENAME.$EXTENSION"
-          MESSAGE="[symlink] $DIRNAME/$FILENAME.$ENV.$EXTENSION -> $DIRNAME/$FILENAME.$EXTENSION"
-          break
-        fi
-      fi
-    done
-
-    echo "$MESSAGE"
-  }
-
-  _docker_devbox_env_symlink "docker-compose.override.yml"
 fi
 
-_docker_devbox_map_workdir() {
-  CONTAINER_PROJECT_DIR="$1"
-
-  RELATIVE_PATH="${PWD/$COMPOSE_PROJECT_DIR/}"
-  CONTAINER_PWD="$CONTAINER_PROJECT_DIR$RELATIVE_PATH"
-  echo $CONTAINER_PWD
-}
-
-# Commands aliases are automatically generated from functions following this pattern
-# _alias_[ALIAS]() { [COMMAND] $@;}
-
-_alias_dc() { docker-compose $@;}
-_alias_run() { docker-compose run --rm $@;}
-
-{{#if_eq webImage "php" ~}}
-_alias_php() { docker-compose run --rm --user www-data --entrypoint php --workdir="$(_docker_devbox_map_workdir "/var/www/html")" web $@;}
-_alias_composer() { docker-compose run --rm --user www-data --entrypoint composer --workdir="$(_docker_devbox_map_workdir "/var/www/html")" web $@;}
-{{#if drupalInit ~}}
-_alias_drush() { docker-compose run --rm --user www-data --entrypoint php --workdir="$(_docker_devbox_map_workdir "/var/www/html")" web /var/www/html/vendor/drush/drush/drush $@;}
-_alias_drupal() { docker-compose run --rm --user www-data --entrypoint php --workdir="$(_docker_devbox_map_workdir "/var/www/html")" web /var/www/html/vendor/drupal/console/bin/drupal $@;}
-{{/if}}
-{{/if_eq}}
-{{#if_eq dbImage "postgres" ~}}
-_alias_psql() { docker-compose run --user postgres --workdir="$(_docker_devbox_map_workdir "/workdir")" db psql -h db -U {{projectName}} -d {{projectName}} $@;}
-_alias_psql-postgres() { docker-compose run --user postgres --workdir="$(_docker_devbox_map_workdir "/workdir")" db psql -h db -U postgres -d {{projectName}} $@;}
-_alias_pg_dump() { docker-compose run --user postgres --workdir="$(_docker_devbox_map_workdir "/workdir")" db pg_dump -h db -U {{projectName}} -O $@;}
-_alias_pg_dump-postgres() { docker-compose run --user postgres --workdir="$(_docker_devbox_map_workdir "/workdir")" db pg_dump -h db -U postgres -O $@;}
-_alias_pg_restore() { docker-compose run --user postgres --workdir="$(_docker_devbox_map_workdir "/workdir")" db pg_restore -h db -U {{projectName}} -d {{projectName}} $@;}
-_alias_pg_restore-postgres() { docker-compose run --user postgres --workdir="$(_docker_devbox_map_workdir "/workdir")" db pg_restore -h db -U postgres -d {{projectName}} $@;}
-{{/if_eq}}
-{{#if_eq dbImage "mysql" ~}}
-_alias_mysql() { docker-compose exec --user root db mysql -uroot -p $@;}
-{{/if_eq}}
-{{#if nodeContainer ~}}
-_alias_node() { docker-compose run --rm --workdir="$(_docker_devbox_map_workdir "/app")" node node $@;}
-_alias_npm() {
-  if [ "$1" == "run" ] && [ "$2" == "dev" ]; then
-    PORTS=" -p ${DOCKER_DEVBOX_PORT_PREFIX}88:80"
-    echo "Port mapping:$PORTS"
-  else
-    PORTS=""
-  fi
-  docker-compose run --rm$PORTS --workdir="$(_docker_devbox_map_workdir "/app")" node npm $@;
-}
-_alias_yarn() {
-  if [ "$1" == "dev" ] || ([ "$1" == "run" ] && [ "$2" == "dev" ]); then
-    PORTS=" -p ${DOCKER_DEVBOX_PORT_PREFIX}88:80"
-    echo "Port mapping:$PORTS"
-  else
-    PORTS=""
-  fi
-  docker-compose run --rm$PORTS --workdir="$(_docker_devbox_map_workdir "/app")" node yarn $@;
-}
-{{/if}}
-{{#if phingContainer ~}}
-_alias_phing() { docker-compose run --rm --user www-data --entrypoint php --workdir="$(_docker_devbox_map_workdir "/app")" phing /composer/vendor/phing/phing/bin/phing  $@;}
-{{/if}}
-{{#if nodeSassContainer ~}}
-_alias_node-sass() { docker-compose run --rm node-sass $@;}
-{{#if drupalInit ~}}
-_alias_build-sass() { docker-compose run --rm --entrypoint node-sass --workdir=/app/web/themes/{{projectName}} node-sass scss -r -o css --importer /usr/local/lib/node_modules/compass-importer/index.js --sourceComments true --source-map true --follow --output-style expanded $@;}
-_alias_watch-sass() { docker-compose run --rm --entrypoint chokidar --workdir=/app/web/themes/{{projectName}} node-sass \"./**/*.scss\" --initial --verbose -p -c \"node-sass scss -r -o css --importer /usr/local/lib/node_modules/compass-importer/index.js --sourceComments true --source-map true --follow --output-style expanded\" $@;}
-{{/if}}
-{{/if}}
-{{#if mavenContainer ~}}
-_alias_mvn() { docker-compose run --rm --workdir="$(_docker_devbox_map_workdir "/usr/src/app")" maven mvn $@;}
-{{/if}}
-
-ALIAS_FUNCTIONS=$(declare -F | sed -r 's/^declare -f //' | awk -F= '/^_?alias_/{print $1 }')
-if [ -z "$BASH_ENTER_ALIAS_ONLY" ]; then echo "Commands: "; fi
-for func in $ALIAS_FUNCTIONS; do
-  autostash alias $(sed -r 's/^_?alias_//' <<< "$func")="$func"
-  if [ -z "$BASH_ENTER_ALIAS_ONLY" ]; then echo " - $(sed -r 's/^_?alias_//' <<< "$func")"; fi
-done
-
-{{#if init ~}}
-if [ -f "./init/init.sh" ] && [ -f ./init/.should-initialize ] && [ -z "$BASH_ENTER_ALIAS_ONLY" ]; then
-  read -p "Project is not initialized. Do you want to initialize it ? [y/N]: " -n 1 -r
-  echo
-  if [[ $REPLY =~ ^[Yy]$ ]]
-  then
-      echo "Running initialization script: ./init/init.sh"
-      ./init/init.sh
-      if [ $? -eq 0 ]; then
-        echo "Initialization succeded"
-      else
-        echo "Initialization failed"
-      fi
-  else
-      echo "Initialization skipped"
-  fi
+if [ -d ~/.docker-devbox/.bash_leave.d ]; then
+  for leave_script in ~/.docker-devbox/.bash_leave.d/*; do
+    ln -rfs $leave_script "$DOCKER_DEVBOX_DIR"/.bash_leave.d/$(basename "$leave_script")
+  done
 fi
-{{/if}}
+
+if [ -d "$DOCKER_DEVBOX_DIR"/.bash_enter.d ]; then
+  for enter_script in "$DOCKER_DEVBOX_DIR"/.bash_enter.d/*; do
+    . $enter_script
+  done
+fi
