--- a/generators/app/templates/.docker/mailcatcher/Dockerfile.template.hbs
+++ b/generators/app/templates/.docker/mailcatcher/Dockerfile.template.hbs
@@ -1,10 +1,11 @@
 FROM alpine:3.6
 MAINTAINER {{authorName}} <{{authorEmail}}>
 
-RUN apk add --update ca-certificates
-
+\{{#if DOCKER_DEVBOX_CA_CERTIFICATES}}
 COPY .ca-certificates/* /usr/local/share/ca-certificates/
+RUN apk add --update ca-certificates
 RUN update-ca-certificates
+\{{/if}}
 
 RUN apk add --update \
   ruby \
