--- a/generators/app/templates/.docker/phing/Dockerfile..template.hbs
+++ b/generators/app/templates/.docker/phing/Dockerfile..template.hbs
@@ -1,8 +1,10 @@
 FROM php:{{phpVersion}}-cli
 MAINTAINER {{authorName}} <{{authorEmail}}>
 
+\{{#if DOCKER_DEVBOX_CA_CERTIFICATES}}
 COPY .ca-certificates/* /usr/local/share/ca-certificates/
 RUN update-ca-certificates
+\{{/if}}
 
 # Register the COMPOSER_HOME environment variable
 ENV COMPOSER_HOME /composer
