--- a/generators/app/templates/docker-compose.yml.hbs
+++ b/generators/app/templates/docker-compose.yml.hbs
@@ -6,11 +6,13 @@ services:
     build:
       context: .docker
       dockerfile: php/Dockerfile
+    image: ${DOCKER_DEVBOX_REGISTRY}{{projectName}}/web
     init: true
+    restart: ${DOCKER_DEVBOX_RESTART_POLICY}
     volumes:
       - "${COMPOSE_PROJECT_DIR}:/var/www/html"
-      - "composer-cache:/composer/cache"
       - "${COMPOSE_PROJECT_DIR}/.docker/php/apache.conf:/etc/apache2/sites-enabled/000-default.conf"
+      - "composer-cache:/composer/cache"
   {{/if_eq ~}}
 {{/if ~}}
 {{#if dbContainer}}
@@ -19,19 +21,23 @@ services:
     build:
       context: .docker
       dockerfile: postgres/Dockerfile
+    image: ${DOCKER_DEVBOX_REGISTRY}{{projectName}}/postgres
     init: true
+    restart: ${DOCKER_DEVBOX_RESTART_POLICY}
     environment:
       - POSTGRES_USER={{projectName}}
       - POSTGRES_PASSWORD={{projectName}}
     volumes:
       - "${COMPOSE_PROJECT_DIR}:/workdir" # Mount this volume to help loading/exporting dumps
-      - "postgresql:/var/lib/postgresql/data"
+      - "postgres:/var/lib/postgresql/data"
   {{/if_eq ~}}
   {{#if_eq dbImage 'mysql'}}
     build:
       context: .docker
       dockerfile: mysql/Dockerfile
+    image: ${DOCKER_DEVBOX_REGISTRY}{{projectName}}/mysql
     init: true
+    restart: ${DOCKER_DEVBOX_RESTART_POLICY}
     environment:
       - MYSQL_ROOT_PASSWORD={{projectName}}
       - MYSQL_DATABASE={{projectName}}
@@ -50,6 +56,7 @@ services:
       args:
         GROUP_ID: "${GROUP_ID}"
         USER_ID: "${USER_ID}"
+    image: ${DOCKER_DEVBOX_REGISTRY}{{projectName}}/node-sass
     init: true
     entrypoint: "/bin/true"
     volumes:
@@ -68,6 +75,7 @@ services:
       args:
         GROUP_ID: "${GROUP_ID}"
         USER_ID: "${USER_ID}"
+    image: ${DOCKER_DEVBOX_REGISTRY}{{projectName}}/node
     init: true
     volumes:
       - "${COMPOSE_PROJECT_DIR}:/app"
@@ -82,6 +90,7 @@ services:
       args:
         DOCKER_VERSION: ${DOCKER_VERSION}
         DOCKER_COMPOSE_VERSION: ${DOCKER_COMPOSE_VERSION}
+    image: ${DOCKER_DEVBOX_REGISTRY}{{projectName}}/phing
     init: true
     environment:
       - COMPOSE_PROJECT_DIR=${COMPOSE_PROJECT_DIR}
@@ -98,7 +107,9 @@ services:
     build:
       context: .docker
       dockerfile: mapserver/Dockerfile
+    image: ${DOCKER_DEVBOX_REGISTRY}{{projectName}}/mapserver
     init: true
+    restart: ${DOCKER_DEVBOX_RESTART_POLICY}
     environment:
       LISTEN_PORT_80: 1
     volumes:
@@ -110,7 +121,7 @@ volumes:
   composer-cache: ~
 {{/if_eq ~}}
 {{#if_eq dbImage 'postgres'}}
-  postgresql: ~
+  postgres: ~
 {{/if_eq ~}}
 {{#if_eq dbImage 'mysql'}}
   mysql: ~
