--- a/generators/app/templates/.bash_enter.env.dist.hbs
+++ b/generators/app/templates/.bash_enter.env.dist.hbs
@@ -27,5 +27,5 @@ export DOCKER_DEVBOX_ENV_SYMLINKS=docker-compose.override.yml
 # CA Certificates to copy inside containers. Should be defined in ~/.docker-devbox/.bash_enter.env instead.
 # export DOCKER_DEVBOX_CA_CERTIFICATES="/etc/ssl/certs/GFI*.pem /etc/ssl/certs/*.local.pem"
 
-# Docker registry to push images
-# export DOCKER_DEVBOX_REGISTRY=172.16.78.219:5000/
+# Docker registry to push images. Should be defined in ~/.docker-devbox/.bash_enter.env instead.
+# export DOCKER_DEVBOX_REGISTRY=docker-registry.etudes.local:5000/
