Publication par défaut de DOCKER_DEVBOX_CA_CERTIFICATES et DOCKER_DEVBOX_REGISTRY (en attente)

--- a/generators/app/templates/.bash_enter.env.dist.hbs
+++ b/generators/app/templates/.bash_enter.env.dist.hbs
@@ -25,7 +25,7 @@ export DOCKER_DEVBOX_ENV_LIST="prod stage dev"
 export DOCKER_DEVBOX_ENV_SYMLINKS=docker-compose.override.yml
 
 # CA Certificates to copy inside containers. Should be defined in ~/.docker-devbox/.bash_enter.env instead.
-# export DOCKER_DEVBOX_CA_CERTIFICATES="/etc/ssl/certs/GFI*.pem /etc/ssl/certs/*.local.pem"
+export DOCKER_DEVBOX_CA_CERTIFICATES="/etc/ssl/certs/GFI*.pem /etc/ssl/certs/*.local.pem"
 
 # Docker registry to push images. Should be defined in ~/.docker-devbox/.bash_enter.env instead.
-# export DOCKER_DEVBOX_REGISTRY=docker-registry.etudes.local:5000/
+export DOCKER_DEVBOX_REGISTRY=docker-registry.etudes.local:5000/
