Remove envhandlebars dependency, replaced by "Mo - Mustache Templates in Bash"

--- a/generators/app/templates/.docker/mailcatcher/Dockerfile.mo.hbs
+++ b/generators/app/templates/.docker/mailcatcher/Dockerfile.mo.hbs
@@ -1,11 +1,11 @@
 FROM alpine:3.6
 MAINTAINER {{authorName}} <{{authorEmail}}>
 
-\{{#if DOCKER_DEVBOX_CA_CERTIFICATES}}
+\{{#DOCKER_DEVBOX_CA_CERTIFICATES}}
 COPY .ca-certificates/* /usr/local/share/ca-certificates/
 RUN apk add --update ca-certificates
 RUN update-ca-certificates
-\{{/if}}
+\{{/DOCKER_DEVBOX_CA_CERTIFICATES}}
 
 RUN apk add --update \
   ruby \
