--- a/generators/app/templates/.docker/php/Dockerfile.mo.hbs
+++ b/generators/app/templates/.docker/php/Dockerfile.mo.hbs
@@ -1,10 +1,10 @@
 FROM php:{{phpVersion}}-apache
 MAINTAINER {{authorName}} <{{authorEmail}}>
 
-\{{#if DOCKER_DEVBOX_CA_CERTIFICATES}}
+\{{#DOCKER_DEVBOX_CA_CERTIFICATES}}
 COPY .ca-certificates/* /usr/local/share/ca-certificates/
 RUN update-ca-certificates
-\{{/if}}
+\{{/DOCKER_DEVBOX_CA_CERTIFICATES}}
 
 # GD
 RUN apt-get update -y && apt-get install -y libpng-dev libfreetype6-dev libjpeg62-turbo-dev && rm -rf /var/lib/apt/lists/* \
