--- a/generators/app/templates/.docker/node-sass/Dockerfile.mo.hbs
+++ b/generators/app/templates/.docker/node-sass/Dockerfile.mo.hbs
@@ -1,10 +1,10 @@
 FROM node:carbon
 MAINTAINER {{authorName}} <{{authorEmail}}>
 
-\{{#if DOCKER_DEVBOX_CA_CERTIFICATES}}
+\{{#DOCKER_DEVBOX_CA_CERTIFICATES}}
 COPY .ca-certificates/* /usr/local/share/ca-certificates/
 RUN update-ca-certificates
-\{{/if}}
+\{{/DOCKER_DEVBOX_CA_CERTIFICATES}}
 
 ENV NODE_EXTRA_CA_CERTS=/etc/ssl/certs/ca-certificates.crt
 
