--- a/generators/app/templates/.bash_enter.env.dist.hbs
+++ b/generators/app/templates/.bash_enter.env.dist.hbs
@@ -22,10 +22,10 @@ export DOCKER_DEVBOX_ENV=dev
 export DOCKER_DEVBOX_ENV_LIST="prod stage dev"
 
 # List of files to symlink based on environment
-export DOCKER_DEVBOX_ENV_SYMLINKS=docker-compose.override.yml
+export DOCKER_DEVBOX_ENV_SYMLINKS="docker-compose.override.yml{{#if mapserverContainer}} .docker/mapserver/mapserver.map{{/if}}"
 
-# CA Certificates to copy inside containers. Should be defined in ~/.docker-devbox/.bash_enter.env instead.
+# CA Certificates to copy inside containers.
 export DOCKER_DEVBOX_CA_CERTIFICATES="/etc/ssl/certs/GFI*.pem /etc/ssl/certs/*.local.pem"
 
-# Docker registry to push images. Should be defined in ~/.docker-devbox/.bash_enter.env instead.
+# Docker registry to push images.
 export DOCKER_DEVBOX_REGISTRY=docker-registry.etudes.local:5000/
