--- a/generators/app/templates/.docker/postgres/Dockerfile.mo.hbs
+++ b/generators/app/templates/.docker/postgres/Dockerfile.mo.hbs
@@ -1,5 +1,5 @@
 FROM postgres:{{postgresVersion}}
-MAINTAINER {{authorName}} <{{authorEmail}}>
+{{#if authorName}}LABEL maintainer {{authorName}}{{#if authorEmail}} <{{authorEmail}}>{{/if}}{{/if}}
 
 RUN apt-get update \
       && apt-get install -y --no-install-recommends \
