--- a/generators/app/templates/.docker/mapserver/Dockerfile.mo.hbs
+++ b/generators/app/templates/.docker/mapserver/Dockerfile.mo.hbs
@@ -1,4 +1,4 @@
 FROM camptocamp/mapserver:7.0
-MAINTAINER {{authorName}} <{{authorEmail}}>
+{{#if authorName}}LABEL maintainer {{authorName}}{{#if authorEmail}} <{{authorEmail}}>{{/if}}{{/if}}
 
 VOLUME /etc/mapserver/
