--- a/generators/app/templates/.docker/maven/Dockerfile.mo.hbs
+++ b/generators/app/templates/.docker/maven/Dockerfile.mo.hbs
@@ -1,5 +1,5 @@
 FROM maven
-MAINTAINER {{authorName}} <{{authorEmail}}>
+{{#if authorName}}LABEL maintainer {{authorName}}{{#if authorEmail}} <{{authorEmail}}>{{/if}}{{/if}}
 
 RUN usermod -u ${HOST_UID:-1000} www-data && groupmod -g ${HOST_GID:-1000} www-data
 
