--- a/generators/app/templates/docker-compose.yml.hbs
+++ b/generators/app/templates/docker-compose.yml.hbs
@@ -113,7 +113,7 @@ services:
     environment:
       LISTEN_PORT_80: 1
     volumes:
-      - "${COMPOSE_PROJECT_DIR}/mapserver:/etc/mapserver"
+      - "${COMPOSE_PROJECT_DIR}/.docker/mapserver:/etc/mapserver"
     user: "${USER_ID}"
 {{/if ~}}
 volumes:
