Fix various issues with bash scripts

--- a/generators/app/templates/.bash_enter.env.dist.hbs
+++ b/generators/app/templates/.bash_enter.env.dist.hbs
@@ -3,20 +3,11 @@
 # Docker Compose project name. Will use the directory name by default
 # export COMPOSE_PROJECT_NAME={{projectName}}
 
-# Domain name to use for virtual host
-export DOCKER_DEVBOX_DOMAIN=test
-
 # Domain name prefix to use for virtual host
 export DOCKER_DEVBOX_DOMAIN_PREFIX={{projectName}}
 
 # Port prefix to use for docker mapping
 export DOCKER_DEVBOX_PORT_PREFIX={{portPrefix}}
-
-# Docker compose restart policy for services containers
-export DOCKER_DEVBOX_RESTART_POLICY="no"
-
-# Current active environment
-export DOCKER_DEVBOX_ENV=dev
 
 # List of supported environments
 export DOCKER_DEVBOX_ENV_LIST="prod stage dev"
@@ -24,8 +15,17 @@ export DOCKER_DEVBOX_ENV_LIST="prod stage dev"
 # List of files to symlink based on environment
 export DOCKER_DEVBOX_ENV_SYMLINKS="docker-compose.override.yml{{#if mapserverContainer}} .docker/mapserver/mapserver.map{{/if}}"
 
+# Domain name to use for virtual host
+export DOCKER_DEVBOX_DOMAIN=test
+
+# Docker compose restart policy for services containers
+export DOCKER_DEVBOX_RESTART_POLICY="no"
+
+# Current active environment
+export DOCKER_DEVBOX_ENV=dev
+
 # CA Certificates to copy inside containers.
-export DOCKER_DEVBOX_CA_CERTIFICATES="/etc/ssl/certs/GFI*.pem /etc/ssl/certs/*.local.pem"
+# export DOCKER_DEVBOX_CA_CERTIFICATES="/etc/ssl/certs/GFI*.pem /etc/ssl/certs/*.local.pem"
 
 # Docker registry to push images.
-export DOCKER_DEVBOX_REGISTRY=docker-registry.etudes.local:5000/
+# export DOCKER_DEVBOX_REGISTRY=docker-registry.etudes.local/
