--- a/generators/app/templates/.bash_enter.env.dist.hbs
+++ b/generators/app/templates/.bash_enter.env.dist.hbs
@@ -24,8 +24,8 @@ export DOCKER_DEVBOX_RESTART_POLICY="no"
 # Current active environment
 export DOCKER_DEVBOX_ENV=dev
 
-# CA Certificates to copy inside containers.
+# CA Certificates to copy inside containers. Should be provided as global environment variable.
 # export DOCKER_DEVBOX_CA_CERTIFICATES="/etc/ssl/certs/GFI*.pem /etc/ssl/certs/*.local.pem"
 
-# Docker registry to push images.
+# Docker registry to push images. Should be provided as global environment variable.
 # export DOCKER_DEVBOX_REGISTRY=docker-registry.etudes.local/
