Fix LABEL maintainer syntax

--- a/generators/app/templates/.docker/mysql/Dockerfile.mo.hbs
+++ b/generators/app/templates/.docker/mysql/Dockerfile.mo.hbs
@@ -1,2 +1,2 @@
 FROM mysql/mysql-server:{{mysqlVersion}}
-{{#if authorName}}LABEL maintainer {{authorName}}{{#if authorEmail}} <{{authorEmail}}>{{/if}}{{/if}}
+{{#if authorName}}LABEL maintainer="{{authorName}}{{#if authorEmail}} <{{authorEmail}}>{{/if}}"{{/if}}
