--- a/generators/app/templates/.docker/node-sass/Dockerfile.mo.hbs
+++ b/generators/app/templates/.docker/node-sass/Dockerfile.mo.hbs
@@ -1,5 +1,5 @@
 FROM node:carbon
-{{#if authorName}}LABEL maintainer {{authorName}}{{#if authorEmail}} <{{authorEmail}}>{{/if}}{{/if}}
+{{#if authorName}}LABEL maintainer="{{authorName}}{{#if authorEmail}} <{{authorEmail}}>{{/if}}"{{/if}}
 
 \{{#DOCKER_DEVBOX_CA_CERTIFICATES}}
 COPY .ca-certificates/* /usr/local/share/ca-certificates/
