--- a/generators/app/templates/.bash_enter.env.dist.hbs
+++ b/generators/app/templates/.bash_enter.env.dist.hbs
@@ -1,6 +1,21 @@
-# Environment specific variables for bash_enter script
+#########################################################
+# Environment specific variables for .bash_enter script #
+#########################################################
 
-# Docker Compose project name. Will use the directory name by default
+# Current active environment
+export DOCKER_DEVBOX_ENV=dev
+
+# Domain name to use for virtual host
+export DOCKER_DEVBOX_DOMAIN=test
+
+# Docker compose restart policy for services containers
+export DOCKER_DEVBOX_RESTART_POLICY="no"
+
+#####################################################
+# Project specific variables for .bash_enter script #
+#####################################################
+
+# Docker Compose project name. Will use the directory name if not defined.
 # export COMPOSE_PROJECT_NAME={{projectName}}
 
 # Domain name prefix to use for virtual host
@@ -15,14 +30,9 @@ export DOCKER_DEVBOX_ENV_LIST="prod stage dev"
 # List of files to symlink based on environment
 export DOCKER_DEVBOX_ENV_SYMLINKS="docker-compose.override.yml{{#if mapserverContainer}} .docker/mapserver/mapserver.map{{/if}}"
 
-# Domain name to use for virtual host
-export DOCKER_DEVBOX_DOMAIN=test
-
-# Docker compose restart policy for services containers
-export DOCKER_DEVBOX_RESTART_POLICY="no"
-
-# Current active environment
-export DOCKER_DEVBOX_ENV=dev
+###########################################
+# Global variables for .bash_enter script #
+###########################################
 
 # CA Certificates to copy inside containers. Should be provided as global environment variable.
 # export DOCKER_DEVBOX_CA_CERTIFICATES="/etc/ssl/certs/GFI*.pem /etc/ssl/certs/*.local.pem"
