--- a/generators/app/templates/.bash_enter.env.dist.hbs
+++ b/generators/app/templates/.bash_enter.env.dist.hbs
@@ -30,6 +30,10 @@ export DOCKER_DEVBOX_ENV_LIST="prod stage dev"
 # List of files to symlink based on environment
 export DOCKER_DEVBOX_ENV_SYMLINKS="docker-compose.override.yml{{#if mapserverContainer}} .docker/mapserver/mapserver.map{{/if}}"
 
+# List of directories containing *.mo.* files to pass through mo templating.
+# Directories ending with "[*]" will be processed recursively.
+export DOCKER_DEVBOX_MO_DIRS="$DOCKER_DEVBOX_DIR/.docker[*]"
+
 ###########################################
 # Global variables for .bash_enter script #
 ###########################################
