--- a/generators/app/templates/docker-compose.override.dev.yml.hbs
+++ b/generators/app/templates/docker-compose.override.dev.yml.hbs
@@ -14,6 +14,10 @@ services:
       - nginx-proxy
     ports:
       - "${DOCKER_DEVBOX_PORT_PREFIX}80:80"
+    {{#if mailcatcherContainer}}
+    volumes:
+      - "${COMPOSE_PROJECT_DIR}/.docker/mailcatcher/ssmtp.conf:/etc/ssmtp/ssmtp.conf:ro"
+    {{/if ~}}
   {{/if_eq ~}}
 {{/if ~}}
 {{#if dbContainer}}
