--- a/generators/app/templates/.gitignore.hbs
+++ b/generators/app/templates/.gitignore.hbs
@@ -6,7 +6,7 @@
 /.docker/mailcatcher/ssmtp.conf
 {{/if}}
 /.docker/.ca-certificates
-/.docker/**/Dockerfile.mo
+/.docker/**/Dockerfile
 {{#if drupalInit ~}}
 web/sites/default/settings.php
 {{/if}}
