Add --default-entrypoint to run command
This adds jq as a downloadable dependency if not already present in path.

--- a/generators/app/templates/docker-compose.yml.hbs
+++ b/generators/app/templates/docker-compose.yml.hbs
@@ -122,7 +122,7 @@ services:
       context: .docker
       dockerfile: sonar-scanner/Dockerfile
     image: ${DOCKER_DEVBOX_REGISTRY}{{projectName}}/sonar-scanner
-    command: "--version"
+    command: /bin/true
     volumes:
       - "${COMPOSE_PROJECT_DIR}:/root/src"
 {{/if ~}}
