--- a/generators/app/templates/docker-compose.override.dev.yml.hbs
+++ b/generators/app/templates/docker-compose.override.dev.yml.hbs
@@ -5,7 +5,7 @@ networks:
 services:
 {{#if webContainer}}
   web:
-  {{#if_eq webImage 'php'}}
+  {{#eq webImage 'php'}}
     environment:
       - XDEBUG_CONFIG=idekey=remote-debug remote_host=${HOST_IP}
       - VIRTUAL_HOST=${DOCKER_DEVBOX_DOMAIN_PREFIX}.${DOCKER_DEVBOX_DOMAIN}
@@ -18,18 +18,18 @@ services:
     volumes:
       - "${COMPOSE_PROJECT_DIR}/.docker/mailcatcher/ssmtp.conf:/etc/ssmtp/ssmtp.conf:ro"
     {{/if ~}}
-  {{/if_eq ~}}
+  {{/eq ~}}
 {{/if ~}}
 {{#if dbContainer}}
   db:
-  {{#if_eq dbImage 'postgres'}}
+  {{#eq dbImage 'postgres'}}
     ports:
       - "${DOCKER_DEVBOX_PORT_PREFIX}32:5432"
-  {{/if_eq ~}}
-  {{#if_eq dbImage 'mysql'}}
+  {{/eq ~}}
+  {{#eq dbImage 'mysql'}}
     ports:
       - "${DOCKER_DEVBOX_PORT_PREFIX}06:3306"
-  {{/if_eq ~}}
+  {{/eq ~}}
 {{/if ~}}
 {{#if nodeContainer}}
   node:
