--- a/generators/app/features/php-apache/templates/.docker/[service.name]/Dockerfile.mo.hbs
+++ b/generators/app/features/php-apache/templates/.docker/[service.name]/Dockerfile.mo.hbs
@@ -1,4 +1,4 @@
-FROM php:{{phpVersion}}-apache
+FROM php:{{tag}}
 {{#if authorName}}LABEL maintainer="{{authorName}}{{#if authorEmail}} <{{authorEmail}}>{{/if}}"{{/if}}
 
 \{{#DOCKER_DEVBOX_CA_CERTIFICATES}}
