--- a/generators/app/features/mysql/templates/.docker/[service.name]/Dockerfile.mo.hbs
+++ b/generators/app/features/mysql/templates/.docker/[service.name]/Dockerfile.mo.hbs
@@ -1,2 +1,2 @@
-FROM mysql/mysql-server:{{mysqlVersion}}
+FROM mysql:{{mysqlVersion}}
 {{#if authorName}}LABEL maintainer="{{authorName}}{{#if authorEmail}} <{{authorEmail}}>{{/if}}"{{/if}}
