--- a/generators/app/features/node/templates/.docker/[service.name]/Dockerfile.mo.hbs
+++ b/generators/app/features/node/templates/.docker/[service.name]/Dockerfile.mo.hbs
@@ -1,4 +1,4 @@
-FROM node:carbon
+FROM node:{{nodeVersion}}
 {{#if authorName}}LABEL maintainer="{{authorName}}{{#if authorEmail}} <{{authorEmail}}>{{/if}}"{{/if}}
 
 \{{#DOCKER_DEVBOX_CA_CERTIFICATES}}
